=== rmw ChangeLog ===

2016-09-15

	Closed  #41 - add config option: force_not_required
	"force_not_required" in config file means -f or --force will not be
	required on the command line for purge to run.

2016-09-14

	Closed #33 - Requiring -f / --force as an option for purge to
	actually delete files (patched by Parth Suresh and Andy Alt)


2016-09-11

	Closed #30 - disable verbose mode by default (patched by Parth Suresh)
	Closed #29 - last entries in undofile get erased (patched by Bruce Hernandez)


2016-09-09

	Makefile.am : Thanks to parthsuresh - added 4 lines (#28) that will
	hopefully fix issue #21

	Added a function: open_err() : called if there is an error opening
	a file, displays a message.

2016-09-08

	Added a function: close_file(), so I don't have to worry about
	changing the way error messages are displayed.

2016-09-04

	* Issuing another release, due to issue #24

2016-09-03

	* Fixed: Warning about missing automake 1.14 #21

	* restore_rmw.c: I changed a lot of variable names, re-worked the
	function a little, and did a bit of cleaning.

	* Issuing an early release due to issue #21

-- Aug. 30 --

When building, rmw will now use the config.h that's generated by ./configure.

Added make_dir(), which creates directories when parents don't exist;
used it in several areas for code-cleanup (#18) and added related error
checking (#13).

Removed 2 functions: waste_check() and mkdirErr().

Added THANKS file.

-- Aug. 28 --

Added -std=gnu99 -Wall to the Makefile, cleaned up some warnings

Renamed purgeD() to is_time_to_purge()
Added some error checking to that function

Cleaned up get_config_data a little
Fixed the warning: /functions/config_rmw.c:252:7: warning: ‘cfgPtr’ may be used
 uninitialized in this function [-Wmaybe-uninitialized]
   if (fclose (cfgPtr) == EOF)

Development documentation updated


-- Aug. 24, 2016 --

Adding more error checks

Adding more comments

More (minor) code optimization

-- Aug. 23, 2016 --
