@@ -2,9 +2,15 @@
 
 2016-09-15
 
+
+
+2016-09-15
+
 	Closed  #41 - add config option: force_not_required
 	"force_not_required" in config file means -f or --force will not be
 	required on the command line for purge to run.
+
+    Completed - using removable media #12
 
 2016-09-14
 
